--- a/resume/05_実習_ユーザ新規作成画面.md
+++ b/resume/05_実習_ユーザ新規作成画面.md
@@ -126,9 +126,9 @@ end
 ### 補足: バリデーションの種類
 使用頻度の高いバリデーション一覧
 
- パラメータ | チェック概要
--- | --
- presence | 空でないこと
- uniqueness | ユニーク(同じ値が無い)であること
- length | 文字列の長さ
- numericality | 数値であること
+ |パラメータ | チェック概要|
+|:--: |:--:|
+| presence | 空でないこと|
+| uniqueness | ユニーク(同じ値が無い)であること|
+| length | 文字列の長さ|
+| numericality | 数値であること|
