--- a/resume/06_実習_ログアウト.md
+++ b/resume/06_実習_ログアウト.md
@@ -54,7 +54,7 @@ Deviseが自動作成するメソッド一覧(使用頻度の高いもの抜粋)
 
 前提：「User」モデルに対してDeviseを設定した場合
 
-メソッド名 | 概要 | 備考|
+|メソッド名 | 概要 | 備考|
 |:--: | :--:|
 |user_signed_in? | ログイン済みかチェック | 「モデル名」 +「_signed_in?」 + 「モデル名」で生成される|
 |current_user | ログイン中のユーザインスタンス | 「current_」 + 「モデル名」で生成される|
