--- a/resume/12_実習_メッセージの返信.md
+++ b/resume/12_実習_メッセージの返信.md
@@ -277,7 +277,7 @@ end
 |5  |1      |雨は嫌だよね|4|
 |6  |3      |仕事がすきなんだね！|2|
 
-id:1のデータを表示する際、`index.heml`から`_timeline.html.erb`を呼び出しています。<br>
+id:1のデータを表示する際、`index.html`から`_timeline.html.erb`を呼び出しています。<br>
 `_timeline.html.erb`の中で`t.replies.each`をしているので、id:1の子要素であるid:4が取得されます。<br>
 `t.replies.each`の中の`render 'timelines/timeline', t: r, is_reply: true`で、再度`_timeline.html.erb`を呼び出しています。
 
@@ -386,7 +386,7 @@ div.timeline_wrapper {
 ```
 
 ### 動作確認
-- 返信ボタンを押下してメッセージを入力し、返信できることを確認。
+- 返信ボタンを押してメッセージを入力し、返信できることを確認。
 
 <br>
 ![](images/msg-13.png)
