--- a/resume/13_実習_メッセージの削除.md
+++ b/resume/13_実習_メッセージの削除.md
@@ -222,10 +222,10 @@ div.timeline_wrapper {
 
 dependentオプションはモデルを削除する場合のアソシエーションに対する動作を設定します。
 
-オプション名 | 概要
--- | --
-:destroy | 子要素も削除する(子要素のdestroyを呼ぶ)
-:delete_all | 子要素も削除する(直接DBの削除実行)
-:nullify | 子要素をNULL更新する
-:restrict_with_exception | 子要素がある場合は例外を発生する
-:restrict_with_error | 子要素がある場合はエラー情報が返ってくる
+|オプション名 | 概要|
+|:--: |:--:|
+|:destroy | 子要素も削除する(子要素のdestroyを呼ぶ)|
+|:delete_all | 子要素も削除する(直接DBの削除実行)|
+|:nullify | 子要素をNULL更新する|
+|:restrict_with_exception | 子要素がある場合は例外を発生する|
+|:restrict_with_error | 子要素がある場合はエラー情報が返ってくる|
