パスワードリマインダー画面の説明ミスを修正

--- a/resume/07_実習_パスワードリマインダー画面.md
+++ b/resume/07_実習_パスワードリマインダー画面.md
@@ -1,6 +1,7 @@
 ## パスワードリマインダー画面の作成
 
 パスワードリマインダー画面のデザインを変更します。<br>
+また、パスワードリマインダー画面では、メール送信が行われますので、 Cloud9 を使用する場合には、前もって [letter_opner_webの導入](https://github.com/elites-team/elites-devise-auth/blob/master/resume/02_%E5%BF%9C%E7%94%A8%E8%AA%B2%E9%A1%8C2.md#22-開発環境でメールの送信を確認するには) をしておいてください。<br>
 主にBootstrapのclassを適用しています。
 ```html
 # app/views/devise/passwords/new.html.erb
@@ -31,7 +32,7 @@
 <br>
 デザイン変更後のパスワードリマインダー画面<br>
 ログイン後に下記にアクセスして、表示内容を確認します。<br>
-`https://【workspace名】-【cloud9のUsername】/users/password/edit`
+`https://【workspace名】-【cloud9のUsername】/users/password/new`
 ![](images/msg-07.png)
 
 <br>
@@ -73,7 +74,7 @@
 ```
 <br>
 デザイン変更後のパスワードリマインダー画面
-![](images/msg-07.png)
+![](images/msg-14.png)
 
 <br>
 ### 動作確認
@@ -81,3 +82,5 @@
 ログインしている場合はログアウトしてから上記のURLにアクセスすること。<br>
 リマインダー画面のメールアドレス送信でメールが受信できること。<br>
 メールのリンクからパスワード再設定画面が表示でき、パスワードの再設定ができること。
+
+
