パスワードリマインダーの説明修正

--- a/resume/07_実習_パスワードリマインダー画面.md
+++ b/resume/07_実習_パスワードリマインダー画面.md
@@ -31,7 +31,7 @@
 
 <br>
 デザイン変更後のパスワードリマインダー画面<br>
-ログイン後に下記にアクセスして、表示内容を確認します。<br>
+ログインしている場合はログアウトしてから下記にアクセスして、表示内容を確認します。<br>
 `https://【workspace名】-【cloud9のUsername】/users/password/new`
 ![](images/msg-07.png)
 
@@ -82,5 +82,3 @@
 ログインしている場合はログアウトしてから上記のURLにアクセスすること。<br>
 リマインダー画面のメールアドレス送信でメールが受信できること。<br>
 メールのリンクからパスワード再設定画面が表示でき、パスワードの再設定ができること。
-
-
