--- a/resume/01_実習_プロジェクトを作成.md
+++ b/resume/01_実習_プロジェクトを作成.md
@@ -7,8 +7,8 @@ $ cd elites-messenger02
 ```
 
 プロジェクトをGit管理する場合、`.gitignore`ファイルを使用すると、ディレクトリおよびファイルを管理外にします。（Gitのトラッキングの対象外とする）<br>
-`.gitignore`は隠しファイルのため、Cloud9上には表示されません。<br>
-nanoエディタを使用して`.gitignore`を修正します。<br>
+`.gitignore`は隠しファイルのため、ローカルでの開発には表示されません。（Cloud9上では表示されます。）<br>
+そこでnanoエディタを使用して`.gitignore`を修正します。<br>
 nanoは、UNIXを中心としたシステムで使われる、テキストエディタの一種です。<br>
 UNIXとは、Windows、Max OSXに代表されるようなOS（Operating System：オペレーティングシステム）の一種です。<br>
 ※viエディタについては別途解説します。<br>
@@ -58,6 +58,8 @@ $ nano .gitignore
 # --**************************************************************--
 
 ```
+`Ctrl+O`でファイルを保存し、`Enter`でファイル名を確定させます。最後に`Ctrl+X`でnanoを終了します。
+
 
 ### 補足: gitignore
 
