--- a/resume/10_実習_メッセージの編集.md
+++ b/resume/10_実習_メッセージの編集.md
@@ -3,18 +3,15 @@
 `update`アクションでメッセージ編集処理を作成します。<br>
 `index`アクションで`params[:id]`が渡されてきた場合、該当するメッセージを取得します。
 
-```ruby
+```diff
 # app/controllers/timelines_controller.rb
 
 class TimelinesController < ApplicationController
   def index
     
-#--************* 修正前 *************
-    @input_message = Timeline.new
-#--************* 修正後 *************
-    # メッセージ入力
-    @input_message = params[:id] ? Timeline.find(params[:id]) : Timeline.new
-#--**********************************
+-    @input_message = Timeline.new
++    # メッセージ入力
++    @input_message = params[:id] ? Timeline.find(params[:id]) : Timeline.new
 
     # タイムラインを取得
     @timeline = Timeline.includes(:user).order('updated_at DESC')
@@ -32,18 +29,16 @@ class TimelinesController < ApplicationController
     redirect_to action: :index
   end
 
-#-*********************** 下記を追加 **************************
-  def update
-    timeline = Timeline.find(params[:id])
-    timeline.attributes = input_message_param
-    if timeline.valid? # バリデーションチェック
-      timeline.save!
-    else
-      flash[:alert] = timeline.errors.full_messages
-    end
-    redirect_to action: :index
-  end
-#-*************************************************************
++  def update
++    timeline = Timeline.find(params[:id])
++    timeline.attributes = input_message_param
++    if timeline.valid? # バリデーションチェック
++      timeline.save!
++    else
++      flash[:alert] = timeline.errors.full_messages
++    end
++    redirect_to action: :index
++  end
 
   private
   def input_message_param
