01実習の.gitignoreの解説修正

--- a/resume/01_実習_プロジェクトを作成.md
+++ b/resume/01_実習_プロジェクトを作成.md
@@ -7,7 +7,7 @@ $ cd elites-messenger02
 ```
 
 プロジェクトをGit管理する場合、`.gitignore`ファイルを使用すると、ディレクトリおよびファイルを管理外にします。（Gitのトラッキングの対象外とする）<br>
-`.gitignore`は隠しファイルのため、ローカルでの開発では表示されません。（Cloud9上では表示されます。）<br>
+`.gitignore`は隠しファイルのため、ローカルやCloud9では表示されません。<br>
 そこでnanoエディタを使用して`.gitignore`を修正します。<br>
 nanoは、UNIXを中心としたシステムで使われる、テキストエディタの一種です。<br>
 UNIXとは、Windows、Max OSXに代表されるようなOS（Operating System：オペレーティングシステム）の一種です。<br>
