[fix]実習12のイメージ画像変更

--- a/resume/05_実習_ユーザ新規作成画面.md
+++ b/resume/05_実習_ユーザ新規作成画面.md
@@ -84,7 +84,7 @@ div.wrapper {
 /* ******************************************** */
 ```
 <br>
-`https://【workspace名】-【cloud9のUsername】/users/sign_up`にアクセスし、全て未入力の状態で`Sign up`を押すとエラーが発生します。<br>
+`https://【workspace名】-【cloud9のUsername】.c9users.io/users/sign_up`にアクセスし、全て未入力の状態で`Sign up`を押すとエラーが発生します。<br>
 エラーメッセージが赤で表示されていればOKです。
 
 <br>
@@ -117,7 +117,7 @@ end
 
 <br>
 ### 動作確認
-- `https://【workspace名】-【cloud9のUsername】//users/sign_up`にアクセスし、ユーザ新規作成画面が表示されること。
+- `https://【workspace名】-【cloud9のUsername】.c9users.io/users/sign_up`にアクセスし、ユーザ新規作成画面が表示されること。
 - 不正なバリデーションの入力でエラーメッセージが表示されること。
 - バリデーションエラーが無い場合、ユーザが作成できること。
 - ログイン画面で作成したユーザ情報でログインできること。
