--- a/resume/12_実習_メッセージの返信.md
+++ b/resume/12_実習_メッセージの返信.md
@@ -69,7 +69,7 @@ class TimelinesController < ApplicationController
    # タイムラインを取得
 #--********************* 修正前 *****************
    @timeline = Timeline.includes(:user).user_filter(params[:filter_user_id]).order('updated_at DESC')
-#--********************* 修正前 *****************
+#--********************* 修正後 *****************
    @timeline = Timeline.includes(:user).not_reply.user_filter(params[:filter_user_id]).order('updated_at DESC')
 
    # ユーザ一覧を取得
